--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
+    "express-ip-access-control": "^1.1.0",
     "mongoose": "^6.1.6"
   }
 }
